# kubera

./: .gitignore  DEPLOYMENT.md  README.md  deploy.sh  docker-compose.prod.yml  plan.md
backend/: .env.example  Dockerfile.prod  README.md  add_over_budget_example.py  create_comprehensive_test_data.py  create_sample_budgets.py  create_sample_transactions.py  create_test_data.py  kubera.db  list_budgets.py  pyproject.toml  requirements.txt  setup-dev.bat  setup-dev.sh  start_server.py
backend/app/: main.py
backend/app/api/endpoints/: accounts.py  auth.py  budgets.py  categories.py  goals.py  recurring_transactions.py  transactions.py  transfers.py
backend/app/core/: auth.py  config.py  database.py  security.py
backend/app/models/: __init__.py  account.py  budget.py  category.py  goal.py  recurring_transaction.py  transaction.py  transfer.py
backend/app/schemas/: __init__.py  account.py  auth.py  budget.py  category.py  goal.py  recurring_transaction.py  transaction.py  transfer.py
backend/app/services/: account.py  budget.py  category_service.py  csv_import.py  goal.py  recurring_transaction.py  transaction.py  transfer.py
frontend/: Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AmountInput.tsx  CSVUploadDialog.tsx  CategorySelect.tsx  CreateAccountDialog.tsx  CreateTransactionDialog.tsx  EditRecurringTransactionDialog.tsx  GoalCard.tsx  GoalForm.tsx  Layout.tsx  ProtectedRoute.tsx  Sidebar.tsx  TransferForm.tsx
frontend/src/config/: api.ts
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/pages/: AccountsPage.tsx  BudgetsPage.tsx  DashboardPage.tsx  GoalsPage.tsx  LoginPage.tsx  RecurringTransactionsPage.tsx  TransactionsPage.tsx
frontend/src/services/: accountService.ts  api.ts  authService.ts  budgetService.ts  categoryService.ts  recurringTransactionService.ts  transactionService.ts  transferService.ts
frontend/src/theme/: index.ts
frontend/src/types/: account.ts  budget.ts  goal.ts  index.ts  recurringTransaction.ts  transaction.ts  transfer.ts
scripts/: backup.sh  restore.sh  sqlite-backup.sh  sqlite-restore.sh
